Added grammar generation using MLCS from gtestr